# decision

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README.md  _config.yml  eslint.config.js  index.html  llms.txt  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish-docs.yml
design/: design
design/decision/: README.md
design/decision/chats/: chat1.md
design/decision/project/: app.jsx  decision.jsx  presentation.jsx
docs/: spec.md
e2e/: bugs.spec.ts  fixtures.ts  smoke.spec.ts
prototype/: app.jsx  decision.jsx  index.html  presentation.jsx  styles.css
shared/types/: session.ts
src/: index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  state.rs  watcher.rs
src/components/: AppShell.tsx
src/components/decision/: DecisionTab.tsx
src/components/md/: CodeBlock.tsx  Markdown.tsx  MermaidBlock.tsx
src/components/presentation/: PresentationTab.tsx  ScaledSlide.tsx  SlideRenderer.tsx
src/hooks/: useKeyboardTabSwitch.ts
src/lib/: highlighter.ts  sessions.ts  utils.ts
src/parser/: diff.ts  layout.ts  parse.ts  prosCons.ts  serialize.ts
src/parser/__tests__/: diff.test.ts  layout.test.ts  parse.test.ts  prosCons.test.ts  serialize.test.ts
src/routes/: home.tsx  session.tsx
src/store/: useDecisionStore.ts
src/store/__tests__/: mutators.test.ts  selectors.test.ts
(+1 files in other folders)
