[package]
name = "decision"
version = "0.1.0"
description = "Facilitate structured team decisions"
authors = ["Lindsen Cruz"]
edition = "2021"

[lib]
name = "decision_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-full = "0.4"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
parking_lot = "0.12"
once_cell = "1"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
